--- a/AdoptionAssist/src/main/java/UserInterface/Dashboard/ParentDashboard.form
+++ b/AdoptionAssist/src/main/java/UserInterface/Dashboard/ParentDashboard.form
@@ -8,9 +8,6 @@
     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[960, 400]"/>
     </Property>
-    <Property name="size" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[900, 675]"/>
-    </Property>
   </Properties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
@@ -85,7 +82,7 @@
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="btnHelp" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <Component id="jPanel1" alignment="0" pref="300" max="32767" attributes="0"/>
+                      <Component id="jPanel1" alignment="0" pref="306" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="thirdPanel" min="-2" max="-2" attributes="0"/>
@@ -134,7 +131,7 @@
                               <Component id="lblRemainingAmount" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
-                      <EmptySpace pref="9" max="32767" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
