--- a/ChildAdoptionSystem/src/userinterface/CounselorRole/OrphanageRequestWorkAreaPanel.form
+++ b/ChildAdoptionSystem/src/userinterface/CounselorRole/OrphanageRequestWorkAreaPanel.form
@@ -38,8 +38,6 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="213" max="-2" attributes="0"/>
               <Component id="btnViewOrphanageApp" min="-2" pref="252" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="44" max="-2" attributes="0"/>
-              <Component id="jButton1" min="-2" pref="207" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
@@ -59,10 +57,7 @@
               <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
               <Component id="jScrollPane1" min="-2" pref="130" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Component id="jButton1" max="32767" attributes="0"/>
-                  <Component id="btnViewOrphanageApp" pref="43" max="32767" attributes="0"/>
-              </Group>
+              <Component id="btnViewOrphanageApp" min="-2" pref="43" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="138" max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -170,11 +165,6 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnBackActionPerformed"/>
       </Events>
-    </Component>
-    <Component class="javax.swing.JButton" name="jButton1">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="View Orphans"/>
-      </Properties>
     </Component>
   </SubComponents>
 </Form>
