--- a/ChildAdoptionSystem/src/userinterface/ParentsRole/ParentsWorkAreaJPanel.form
+++ b/ChildAdoptionSystem/src/userinterface/ParentsRole/ParentsWorkAreaJPanel.form
@@ -28,7 +28,7 @@
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Component id="btnViewFamily" alignment="0" pref="256" max="32767" attributes="0"/>
                           <Component id="checkRequestsPending" alignment="0" pref="256" max="32767" attributes="0"/>
-                          <Component id="btnViewOrphanages" min="-2" pref="252" max="-2" attributes="0"/>
+                          <Component id="btnScheduleVisitOrphanage" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="dashboardPanel" min="-2" max="-2" attributes="0"/>
@@ -53,19 +53,15 @@
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="dashboardPanel" pref="474" max="32767" attributes="0"/>
+                  <Component id="dashboardPanel" pref="921" max="32767" attributes="0"/>
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="checkRequestsPending" min="-2" pref="57" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="btnViewFamily" min="-2" pref="57" max="-2" attributes="0"/>
-                      <EmptySpace pref="353" max="32767" attributes="0"/>
-                      <EmptySpace pref="353" max="32767" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="btnViewOrphanages" min="-2" pref="58" max="-2" attributes="0"/>
+                      <Component id="btnScheduleVisitOrphanage" min="-2" pref="64" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
                   </Group>
-                  <Component id="dashboardPanel" pref="474" max="32767" attributes="0"/>
-                  <Component id="dashboardPanel" pref="476" max="32767" attributes="0"/>
               </Group>
           </Group>
       </Group>
@@ -128,17 +124,17 @@
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <EmptySpace min="0" pref="474" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="921" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
       </Layout>
     </Container>
-    <Component class="javax.swing.JButton" name="btnViewOrphanages">
+    <Component class="javax.swing.JButton" name="btnScheduleVisitOrphanage">
       <Properties>
-        <Property name="text" type="java.lang.String" value="View Orphanages"/>
+        <Property name="text" type="java.lang.String" value="Schedule visit with Orphanage"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnViewOrphanagesActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnScheduleVisitOrphanageActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
