--- a/ChildAdoptionSystem/src/userinterface/ParentsRole/ParentsWorkAreaJPanel.form
+++ b/ChildAdoptionSystem/src/userinterface/ParentsRole/ParentsWorkAreaJPanel.form
@@ -131,6 +131,9 @@
     </Container>
     <Component class="javax.swing.JButton" name="btnScheduleVisitOrphanage">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="0" green="cc" red="cc" type="rgb"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Schedule visit with Orphanage"/>
       </Properties>
       <Events>
